[#447] Utilise String coder and value field to optimise writing of ASCII strings
Co-authored-by: William Burns <william.a.burns@gmail.com>